cambio en configuración de conexión a base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+server.port = 8787
 
-
-spring.datasource.url=jdbc:sqlserver://euroceramica.database.windows.net:1433;database=euroceramica;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=euroceramicaAdmin@euroceramica
-spring.datasource.password=Aasdf1234$
+spring.datasource.url=jdbc:sqlserver://eurodb.clrsz4of3vgu.us-east-2.rds.amazonaws.com:1433;database=euroceramica;loginTimeout=30;
+spring.datasource.username=admin
+spring.datasource.password=euroceramicaAdmin
 
 spring.datasource.initialization-mode=always
