--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
+server.port = 80
 
-
-spring.datasource.url=jdbc:sqlserver://eurodb.clrsz4of3vgu.us-east-2.rds.amazonaws.com:1433;database=euroceramica;
+spring.datasource.url=jdbc:sqlserver://eurodb.clrsz4of3vgu.us-east-2.rds.amazonaws.com:1433;database=euroceramica;loginTimeout=30;
 spring.datasource.username=admin
 spring.datasource.password=euroceramicaAdmin
 
