--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = ${PORT:8989}
-server.servlet.context-path="/apiEuroceramica/api"
+server.servlet.context-path=/apiEuroceramica/api
 spring.datasource.url=jdbc:sqlserver://eurodb.clrsz4of3vgu.us-east-2.rds.amazonaws.com:1433;database=euroceramica;loginTimeout=30;
 spring.datasource.username=admin
 spring.datasource.password=euroceramicaAdmin
